--- a/templates/index.html
+++ b/templates/index.html
@@ -22,3 +22,29 @@
 <script src=/static/user/js/app.ea32a3c5.js></script>
 </body>
 </html>
+
+
+<!DOCTYPE html>
+<html lang=en>
+<head>
+    <meta charset=utf-8>
+    <meta http-equiv=X-UA-Compatible content="IE=edge">
+    <meta name=viewport content="width=device-width,initial-scale=1">
+    <link rel=icon href=/static/user/favicon.ico>
+    <link rel=stylesheet href=//at.alicdn.com/t/font_1613333_xxpcc4ow6yl.css>
+    <title>美团外卖</title>
+    <link href=/static/user/css/app.9719a569.css rel=preload as=style>
+    <link href=/static/user/css/chunk-vendors.80dbe460.css rel=preload as=style>
+    <link href=/static/user/js/app.252ad294.js rel=preload as=script>
+    <link href=/static/user/js/chunk-vendors.a9766b4b.js rel=preload as=script>
+    <link href=/static/user/css/chunk-vendors.80dbe460.css rel=stylesheet>
+    <link href=/static/user/css/app.9719a569.css rel=stylesheet>
+</head>
+<body>
+<noscript><strong>We're sorry but meituan doesn't work properly without JavaScript enabled. Please enable it to
+    continue.</strong></noscript>
+<div id=app></div>
+<script src=/static/user/js/chunk-vendors.a9766b4b.js></script>
+<script src=/static/user/js/app.252ad294.js></script>
+</body>
+</html>
