--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@
     <title>美团外卖</title>
     <link href=/static/user/css/app.9719a569.css rel=preload as=style>
     <link href=/static/user/css/chunk-vendors.80dbe460.css rel=preload as=style>
-    <link href=/static/user/js/app.252ad294.js rel=preload as=script>
+    <link href=/static/user/js/app.252ad294.js rel=preload as=script>fdrb
     <link href=/static/user/js/chunk-vendors.a9766b4b.js rel=preload as=script>
     <link href=/static/user/css/chunk-vendors.80dbe460.css rel=stylesheet>
     <link href=/static/user/css/app.9719a569.css rel=stylesheet>
